# openapi-frontend

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: tests.yml
docs/: README.md
scripts/: deploy  lint
source/: app.py  configuration.py  database.py  endpoints.py  http.py  openapi.py  queries.py  routes.py  searchInterface.py  session.py  settings.py  staticfiles.py  tables.py  templates.py  views.py
source/auth/: routes.py  views.py
source/resources/: helpers.py  routes.py  views.py
source/users/: routes.py  views.py
statics/css/: accordion.css  app.css  autocomplete-trevoreyre.css  autocomplete.css  collapsible.css  details.css  disclosure.css  field.css  filters.css  forms.css  gallery.css  global.css  header.css  listitem.css  menu.css  menubutton.css  pagination.css  resource.css  search.css  select.css  tables.css  treeview.css  variables.css
statics/js/: MenuButton_heydon.js  accordion.js  app.js  autocomplete-tarekraafat-instance.js  autocomplete-tarekraafat.js  autocomplete-trevoreyre-instance.js  autocomplete-trevoreyre.js  autocomplete-trevoreyre.min.js  autocomplete.js  autocomplete.min.js  bookmarks-vanilla.js  bookmarks.js  collapsible.js  dateform.js  disclosure-polyfill.min.js  disclosure.js  index.js  menu.js  menubutton.js  treeLinks.js  treeitemLinks.js
templates/: 404.html  500.html  about.html  base.html  base.j2  base.jinja  clear.html  error.html  error.j2  error.jinja  index.html  index.j2  index.jinja  macros.html  macros.jinja  profile.html  profile_editor.html  resource.html  resource.j2  resource.jinja  search.html  stream.html  test.html  test.j2  video.html  welcome.html
templates/components/: facets.html  filters.html  galleryitem.html  listitem.html  objectitem.html  pagination-resource.html  pagination-search.html  pagination.html  zero-hits.html
templates/users/: bookmarks.html  profile.html  profile_editor.html  searches.html
