[tool.poetry]
name = "openapi-frontend"
version = "0.1.0"
description = "aarhusarkivet 2.0"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.2"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
jinja2 = "^2.11.1"
itsdangerous = "^1.1.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.12.0"
httpx = "^0.12.0"
sqlalchemy = "^1.3.16"
databases = {git = "https://github.com/encode/databases.git", extras = ["sqlite"]}
boto3 = "^1.14.48"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
