[tool.poetry]
name = "openapi-frontend"
version = "0.1.0"
description = "aarhusarkivet 2.0"
authors = ["Claus Juhl Knudsen <cjk@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = ">=3.7"
starlette = "^0.27.0"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
jinja2 = "^2.11.1"
itsdangerous = "^1.1.0"
python-multipart = "^0.0.5"
python-dotenv = "^0.12.0"
httpx = "^0.12.0"
boto3 = "^1.14.48"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
flake8 = "^3.7.9"

[tool.black]
line-length = 88
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
